--- a/themes/perevozkin/sass/_placeholders.scss
+++ b/themes/perevozkin/sass/_placeholders.scss
@@ -102,6 +102,7 @@
 %db { display: block; }
 %di { display: inline; }
 %dib { display: inline-block; }
+%dt { display: table; }
 %dtr { display: table-row; }
 %dtc { display: table-cell; }
 
